utoipa-gen/tests/snapshots/path_derive__derive_octet_stream_request_body.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&request_body"
snapshot_kind: text
---
{
  "content": {
    "application/octet-stream": {
      "schema": {
        "items": {
          "format": "int32",
          "minimum": 0,
          "type": "integer"
        },
        "type": "array"
      }
    }
  },
  "required": true
}
