utoipa-gen/tests/snapshots/path_derive__derive_parameter_rename_expr.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
---
[
  {
    "in": "path",
    "name": "renamed_field",
    "required": true,
    "schema": {
      "default": null
    }
  }
]
