utoipa-gen/tests/snapshots/path_derive__derive_parameter_rename_expr_in_param_name_and_title.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
---
[
  {
    "in": "query",
    "name": "filter_value",
    "required": true,
    "schema": {
      "type": "string"
    }
  },
  {
    "in": "query",
    "name": "another_name",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
