utoipa-gen/tests/snapshots/path_derive__derive_path_include_str_description.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&operation"
snapshot_kind: text
---
{
  "description": "This is description from include_str!\n",
  "operationId": "test_description_summary",
  "responses": {
    "200": {
      "description": "success response"
    }
  },
  "tags": []
}
