utoipa-gen/tests/snapshots/path_derive__derive_path_parameters_container_level_default.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "in": "query",
    "name": "vec_default",
    "required": false,
    "schema": {
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  },
  {
    "in": "query",
    "name": "string",
    "required": false,
    "schema": {
      "type": "string"
    }
  }
]
