utoipa-gen/tests/snapshots/path_derive__derive_path_params_always_required.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "in": "path",
    "name": "value",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
