utoipa-gen/tests/snapshots/path_derive__derive_path_params_custom_rename_all.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "in": "query",
    "name": "vecDefault",
    "required": false,
    "schema": {
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  }
]
