utoipa-gen/tests/snapshots/path_derive__derive_path_params_into_params_with_unit_type.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "in": "path",
    "name": "in",
    "required": true,
    "schema": {
      "default": null
    }
  }
]
